packages/chlib/src/rules/dsl-grammar.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Document: peg$parseDocument,
    Scalar: peg$parseScalar,
    OptionList: peg$parseOptionList,
    ReplacementDocument: peg$parseReplacementDocument,
  };
  let peg$startRuleFunction = peg$parseDocument;

  const peg$c0 = "\n";
  const peg$c1 = "//";
  const peg$c2 = "#";
  const peg$c3 = "/*";
  const peg$c4 = "*";
  const peg$c5 = "and";
  const peg$c6 = ":";
  const peg$c7 = "\"";
  const peg$c8 = "\\\"";
  const peg$c9 = "'";
  const peg$c10 = "\\'";
  const peg$c11 = "when";
  const peg$c12 = "unless";
  const peg$c13 = "\\\\";
  const peg$c14 = "\\";
  const peg$c15 = "[";
  const peg$c16 = "]";

  const peg$r0 = /^[^\n]/;
  const peg$r1 = /^[\t\v-\r :\xA0\u1680\u2000-\u200A\u2028-\u2029\u202F\u205F\u3000\uFEFF]/;
  const peg$r2 = /^["']/;
  const peg$r3 = /^[^"\n]/;
  const peg$r4 = /^[^'\n]/;
  const peg$r5 = /^["\\]/;
  const peg$r6 = /^[^"\\\n]/;
  const peg$r7 = /^['\\]/;
  const peg$r8 = /^[^'\\\n]/;
  const peg$r9 = /^[^"]/;
  const peg$r10 = /^[^']/;
  const peg$r11 = /^[^\]"'[]/;
  const peg$r12 = /^[\uFEFF\u200B\u200C\u200D]/;
  const peg$r13 = /^[ \t\v\f\r\xA0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\uFEFF]/;

  const peg$e0 = peg$literalExpectation("\n", false);
  const peg$e1 = peg$literalExpectation("//", false);
  const peg$e2 = peg$literalExpectation("#", false);
  const peg$e3 = peg$literalExpectation("/*", false);
  const peg$e4 = peg$literalExpectation("*", false);
  const peg$e5 = peg$classExpectation(["\n"], true, false, false);
  const peg$e6 = peg$literalExpectation("and", true);
  const peg$e7 = peg$classExpectation(["\t", ["\v", "\r"], " ", ":", "\xA0", "\u1680", ["\u2000", "\u200A"], ["\u2028", "\u2029"], "\u202F", "\u205F", "\u3000", "\uFEFF"], false, false, false);
  const peg$e8 = peg$literalExpectation(":", false);
  const peg$e9 = peg$classExpectation(["\"", "'"], false, false, false);
  const peg$e10 = peg$literalExpectation("\"", false);
  const peg$e11 = peg$literalExpectation("\\\"", false);
  const peg$e12 = peg$classExpectation(["\"", "\n"], true, false, false);
  const peg$e13 = peg$literalExpectation("'", false);
  const peg$e14 = peg$literalExpectation("\\'", false);
  const peg$e15 = peg$classExpectation(["'", "\n"], true, false, false);
  const peg$e16 = peg$anyExpectation();
  const peg$e17 = peg$literalExpectation("when", false);
  const peg$e18 = peg$literalExpectation("unless", false);
  const peg$e19 = peg$literalExpectation("\\\\", false);
  const peg$e20 = peg$literalExpectation("\\", false);
  const peg$e21 = peg$classExpectation(["\"", "\\"], false, false, false);
  const peg$e22 = peg$classExpectation(["\"", "\\", "\n"], true, false, false);
  const peg$e23 = peg$classExpectation(["'", "\\"], false, false, false);
  const peg$e24 = peg$classExpectation(["'", "\\", "\n"], true, false, false);
  const peg$e25 = peg$classExpectation(["\""], true, false, false);
  const peg$e26 = peg$classExpectation(["'"], true, false, false);
  const peg$e27 = peg$literalExpectation("[", false);
  const peg$e28 = peg$classExpectation(["]", "\"", "'", "["], true, false, false);
  const peg$e29 = peg$literalExpectation("]", false);
  const peg$e30 = peg$classExpectation(["\uFEFF", "\u200B", "\u200C", "\u200D"], false, false, false);
  const peg$e31 = peg$classExpectation([" ", "\t", "\v", "\f", "\r", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u2028", "\u2029", "\u202F", "\u205F", "\u3000", "\uFEFF"], false, false, false);

  function peg$f0(first, rest) {    return [first, ...rest];  }
  function peg$f1() {    return { type: "blank", line: location().start.line };  }
  function peg$f2() {
    return { type: "comment", line: location().start.line };
  }
  function peg$f3(value) {
    return { type: "value", line: location().start.line, value };
  }
  function peg$f4(line) {    return line;  }
  function peg$f5(head) {
    return { type: "and-header", line: location().start.line, ...head };
  }
  function peg$f6() {
    return { type: "invalid-and", line: location().start.line };
  }
  function peg$f7(action, head) {
    return { type: "header", line: location().start.line, action, ...head };
  }
  function peg$f8() {    return { type: "unknown", line: location().start.line };  }
  function peg$f9(target, options) {
    return { target, optionsSource: options ?? "" };
  }
  function peg$f10(quoted, rest) {
    return { kind: "quoted", value: quoted, rest: rest ?? "" };
  }
  function peg$f11() {    return { kind: "unclosed" };  }
  function peg$f12(text) {    return { kind: "bare", text };  }
  function peg$f13() {    return '"';  }
  function peg$f14(chars) {    return chars.join("");  }
  function peg$f15() {    return "'";  }
  function peg$f16(chars) {    return chars.join("");  }
  function peg$f17(value) {    return value ?? { kind: "bare", text: "" };  }
  function peg$f18() {    return null;  }
  function peg$f19(items) {    return items.filter((item) => item !== null);  }
  function peg$f20(first, rest) {    return [first, ...rest];  }
  function peg$f21(content) {    return content;  }
  function peg$f22(keyword, field, operator, value) {
    return { type: "replacement-condition", line: location().start.line, column: location().start.column, keyword, field, operator, value };
  }
  function peg$f23(keyword, value) {
    return { type: "replacement-field", line: location().start.line, column: location().start.column, keyword, value: value ?? { kind: "bare", text: "" } };
  }
  function peg$f24(quoted, rest) {    return { kind: "quoted", value: quoted, rest: rest ?? "" };  }
  function peg$f25() {    return { kind: "unclosed" };  }
  function peg$f26(text) {    return { kind: "bare", text };  }
  function peg$f27() {    return '\\';  }
  function peg$f28() {    return '"';  }
  function peg$f29() {    return '\\';  }
  function peg$f30(chars) {    return chars.join("");  }
  function peg$f31() {    return '\\';  }
  function peg$f32() {    return "'";  }
  function peg$f33() {    return '\\';  }
  function peg$f34(chars) {    return chars.join("");  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseLine();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 10) {
        s4 = peg$c0;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseLine();
        if (s5 !== peg$FAILED) {
          s3 = s5;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 10) {
          s4 = peg$c0;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseLine();
          if (s5 !== peg$FAILED) {
            s3 = s5;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f0(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLine() {
    let s0;

    s0 = peg$parseBlankLine();
    if (s0 === peg$FAILED) {
      s0 = peg$parseCommentLine();
      if (s0 === peg$FAILED) {
        s0 = peg$parseValueLine();
        if (s0 === peg$FAILED) {
          s0 = peg$parseTopLevelLine();
        }
      }
    }

    return s0;
  }

  function peg$parseBlankLine() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseLeadIn();
    s2 = peg$parseLineEnd();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCommentLine() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseLeadIn();
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s2 = peg$c1;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 35) {
        s2 = peg$c2;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c3) {
          s2 = peg$c3;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 42) {
            s2 = peg$c4;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r0.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = input.charAt(peg$currPos);
        if (peg$r0.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
      }
      peg$savedPos = s0;
      s0 = peg$f2();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseValueLine() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$parseWs();
    peg$silentFails--;
    if (s2 !== peg$FAILED) {
      peg$currPos = s1;
      s1 = undefined;
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLeadIn();
      s3 = peg$parseValueContent();
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$parseWs();
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$parseWs();
        }
        s5 = peg$parseLineEnd();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTopLevelLine() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseLeadIn();
    s2 = peg$parseAndHeaderLine();
    if (s2 === peg$FAILED) {
      s2 = peg$parseInvalidAndLine();
      if (s2 === peg$FAILED) {
        s2 = peg$parseHeaderLine();
        if (s2 === peg$FAILED) {
          s2 = peg$parseUnknownLine();
        }
      }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f4(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAndHeaderLine() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 3);
    if (s1.toLowerCase() === peg$c5) {
      peg$currPos += (3);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseWs();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseWs();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseHeaderTail();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInvalidAndLine() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 3);
    if (s1.toLowerCase() === peg$c5) {
      peg$currPos += (3);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = input.charAt(peg$currPos);
      if (peg$r1.test(s2)) {
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s2 === peg$FAILED) {
        s2 = peg$parseLineEnd();
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = input.charAt(peg$currPos);
        if (peg$r0.test(s4)) {
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = input.charAt(peg$currPos);
          if (peg$r0.test(s4)) {
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
        }
        peg$savedPos = s0;
        s0 = peg$f6();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHeaderLine() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parseNonWs();
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseNonWs();
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseWs();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseWs();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseHeaderTail();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f7(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseUnknownLine() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = input.charAt(peg$currPos);
      if (peg$r0.test(s2)) {
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
    }
    peg$savedPos = s0;
    s1 = peg$f8();
    s0 = s1;

    return s0;
  }

  function peg$parseHeaderTail() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;
